--- a/contact.css
+++ b/contact.css
@@ -2,7 +2,7 @@
 
 .contact{
   position: absolute;
-  background: url('../Group_Project/Undergraduates-20180329_1427JE.jpg');
+  background: url('Undergraduates-20180329_1427JE.jpg');
   width: 100%;
   height: 100vh;
   background-position: center;
